# fractal

./: CMakeLists.txt  Makefile  README.md
includes/: colors.h  events.h  fractol.h
lib/libft/: Makefile
lib/libft/includes/: libft.h
lib/libft/src/: ft_itoa.c
src/: colors.c  drawer.c  fractal.c  helper.c  image.c  main.c  meta.c  palette.c  palette2.c  zoom.c
src/events/: keyboard.c  mouse.c
src/fractals/: biomorph.c  burningship.c  frothy.c  julia.c  mandelbrot.c  spider.c  thorn.c  unknown.c
